<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <GVL Name="_Register" Id="{a8340913-95a9-44cd-82a6-2ed5326f03f8}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL INTERNAL
	iDomain			: ARRAY[0..Param.MAX_DOMAIN] OF I_Domain;
	nSize			: UDINT := 0;
	
	owner			: Tags.TagOwner;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>